force-app/main/default/objects/LLC_BI__External_Application_Lookup__c/LLC_BI__External_Application_Lookup__c.object-meta.xml
<CustomObject>
    <description>The External Application Lookup object is used to identify external applications using a Context Id, and a External Id.</description>
    <label>External Application Lookup</label>
    <nameField>
        <label>External Application Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Application Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>