force-app/main/default/objects/LLC_BI__External_Application_Lookup__c/fields/LLC_BI__External_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Source_Id__c</fullName>
    <description>The system automatically populates this text field to indicate the identification code of the indirect source of origination within the context of an external system. By default, this field is blank.</description>
    <inlineHelpText>This field displays the identification code of the indirect source of origination within the external system.</inlineHelpText>
    <label>External Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>