force-app/main/default/objects/LLC_BI__External_Application_Lookup__c/fields/LLC_BI__External_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Transaction_Id__c</fullName>
    <description>The system automatically populates this string field to capture the incoming application&apos;s external transaction ID. By default, this field is blank.</description>
    <inlineHelpText>This auto-populated field contains the application&apos;s external transaction ID.</inlineHelpText>
    <label>External Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>