force-app/main/default/objects/LLC_BI__External_Application_Lookup__c/fields/LLC_BI__Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lead_Source__c</fullName>
    <description>The system automatically populates this text field to capture the name of the third-party source of origination within the context of an external system.</description>
    <inlineHelpText>This field contains an external application&apos;s system name.</inlineHelpText>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>